wk_taa_taaqa/src/objects/ATA_Rule__c.object
<CustomObject>
    <description>Defines collection of field driving a rule.</description>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FieldSet__c</fullName>
        <description>FieldSet Name</description>
        <label>FieldSet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rule Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ATA</fullName>
                </value>
                <value>
                    <fullName>LeadOwnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sobject__c</fullName>
        <description>Object to which we apply the rule</description>
        <label>Sobject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>ATA Rule</label>
    <listViews>
        <fullName>ATA_Rule</fullName>
        <columns>NAME</columns>
        <columns>Rule_Type__c</columns>
        <columns>FieldSet__c</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Rule_Enabled__c</columns>
        <columns>Sobject__c</columns>
        <columns>External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rule_Type__c</field>
            <operation>equals</operation>
            <value>ATA</value>
        </filters>
        <label>ATA Rule</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATARULE-{00000}</displayFormat>
        <label>ATA Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATA Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>